Fix scrolling on load, pre element creations, added Keycodes and Keys classes, <code> on Ctr + d, .fancy on Ctrl + f, html-text conversions on Ctrl + ' + [Shift] and updated tutorial.

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ html {
 }
 [contenteditable=true] {
   border-color: #f00 !important;
+  box-shadow: 0 0 5px #fa8;
 }
 .compact {
   max-height: 8em;
